Rename QwenBridge to QwenProxy in docs and scripts; drop copyright banners
